Fixed wonky layout issues

--- a/Day12/spoonriver.css
+++ b/Day12/spoonriver.css
@@ -1,7 +1,8 @@
-body
+			body
 			{
 				margin:0px;
 				background-color: #030303;
+				padding:0px;
 			}
 			h1
 			{
@@ -18,7 +19,6 @@ body
 				width: 100%;
 				height: 444px;
 				overflow: hidden;
-				margin:0px;
 				box-shadow: 5px 5px 25px 5px #715d40;
 				box-shadow: -5px -5px 25px 2px #715d40;
 				-webkit-animation:fadein 5s;
@@ -31,12 +31,12 @@ body
 			/*Animation for banner*/
 			.first
 			{
-				/*-webkit-animation: movepic 20s linear infinite; 
-				-webkit-animation-delay: 5s; */
+				-webkit-animation: movepic 20s linear infinite; 
+				-webkit-animation-delay: 5s;
 			}
 			img
 			{
-				width:33.33%;
+				width:33.34%;
 			}
 			/*To Do: Smooth animations here*/
 			@-webkit-keyframes "movepic"
@@ -54,13 +54,15 @@ body
 			}
 			#menuitems
 			{
+				height:40%;
+				text-align:center;
 				color: #f1c588;
 			}
 			a
 			{
 				font-family: 'Raleway';
 				font-size: 30px;
-				position:fixed;
+				height:45px;
 			}
 			a:hover
 			{
@@ -77,9 +79,9 @@ body
 			{
 				-webkit-animation:fadein 5s;
 				-webkit-animation-delay: 1s;
-				margin-right: auto;
-				margin-left: auto;
 				width: 100px;
+				margin-left: 50px;
+				margin-right: 50px;
 			}
 			#contact
 			{
